--- a/css/eoi.css
+++ b/css/eoi.css
@@ -26,6 +26,8 @@
 	text-align: center;
 	border-radius:1ex 1ex 0 0;
 	display:inline-block;
+	color: #666;
+	font-family: sans-serif !important;
 }
 .eoi label, .eoi input, .eoi select { width: 17em; }
 
