--- a/css/nzcf-cadet-net.css
+++ b/css/nzcf-cadet-net.css
@@ -19,17 +19,19 @@
 */
 
 fieldset {
-	border: 1px solid #ccc !important;
+	border: 1px solid #eee !important;
 	border-radius: 1ex !important;
 	padding: 1em !important;
 	margin-top: 2em !important;
 }
 legend {
-	border: 1px solid #ccc !important;
+	border: 1px solid #ddd !important;
 	border-radius: 2em !important;
 	padding: 0.5ex 1em 0.3ex 1em !important;
 	width: 100% !important;
 	background-color: #f9f9f9;
+	color: #666;
+	font-family: sans-serif !important;
 }
 input,select {
 	height:2em;
