--- a/css/nzcf-cadetnet.css
+++ b/css/nzcf-cadetnet.css
@@ -47,3 +47,10 @@ input[type=date],label[type=date] {
 input[type=text].rank,label.rank,select.rank {
 	width: 13em;
 }
+table {
+	border-spacing: 0;
+	border-collapse: collapse;
+}
+table thead {
+	border-radius:10em;
+}
