--- a/css/nzcf-cadetnet.css
+++ b/css/nzcf-cadetnet.css
@@ -50,7 +50,9 @@ input[type=text].rank,label.rank,select.rank {
 table {
 	border-spacing: 0;
 	border-collapse: collapse;
+	background-color:White;
 }
 table thead {
 	border-radius:10em;
 }
+.evenrow { background-color: #f3f3f3; }
