Unit import and update edit

--- a/css/nzcf-cadetnet.css
+++ b/css/nzcf-cadetnet.css
@@ -56,3 +56,4 @@ table thead {
 	border-radius:10em;
 }
 .evenrow { background-color: #f3f3f3; }
+tr.inactive td { text-decoration: line-through; opacity: 0.3; }
