--- a/css/nzcf-cadetnet.css
+++ b/css/nzcf-cadetnet.css
@@ -56,7 +56,7 @@ table thead {
 	border-radius:10em;
 }
 .evenrow { background-color: #f3f3f3; }
-tr.inactive td { text-decoration: line-through; opacity: 0.3; }
+table:not('.wp-list-table') tr.inactive td { text-decoration: line-through; opacity: 0.3; }
 table.tablesorter thead tr .header {
 	background-image: url(../js/tablesorter/themes/blue/bg.gif);
 	background-repeat: no-repeat;
